# v-rust

./: .gitignore  AGENT.md  AGENTS.md  ARCHITECTURE_MAPPING.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  docker-compose.yml  justfile  rustfmt.toml  tdd.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml  progress.yml
crates/codegen_cranelift/: Cargo.toml
crates/codegen_cranelift/src/: lib.rs
crates/codegen_cranelift/tests/: e2e.rs
crates/codegen_llvm/: Cargo.toml
crates/codegen_llvm/src/: lib.rs
crates/codegen_traits/: Cargo.toml
crates/codegen_traits/src/: lib.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: lib.rs  source.rs  types.rs
crates/frontend/src/lex/: mod.rs
crates/frontend/src/parse/: ast.rs  mod.rs
crates/frontend/src/sema/: mod.rs
docs/: repository-strategy.md  runtime-abi.md  tdd-roadmap.md
src/: compiler.rs  lib.rs  main.rs
src/codegen/: mod.rs
src/driver/: cli.rs  mod.rs  test_runner.rs
src/lex/: mod.rs
src/lexer/: mod.rs
src/parse/: ast.rs  mod.rs
src/parser/: ast.rs  mod.rs
src/sema/: mod.rs
tests/: official_subset.rs  official_subset.txt  official_suite.rs  tiny_v_fixtures.rs  vlib_subset.rs  vlib_subset.txt  vlib_suite.rs
tests/common/: mod.rs
tests/fixtures/tiny/fail/: immutable_assignment.stderr  immutable_assignment.v  undeclared_assignment.stderr  undeclared_assignment.v  unexpected_character.stderr  unresolved_import.stderr  unresolved_import.v
tests/fixtures/tiny/pass/: arithmetic_precedence.v  builtin_import.stdout  builtin_import.v  function_return_int.v  hello_string.stdout  hello_string.v  line_comments.stdout  line_comments.v  module_main.stdout  module_main.v  mut_assignment.v  selective_import.stdout  selective_import.v
tests/official_common/: mod.rs
tests/tiny_common/: mod.rs
