[workspace]
members = [".", "crates/frontend", "crates/codegen_traits", "crates/codegen_llvm", "crates/codegen_cranelift"]
resolver = "2"

[package]
name = "v-rust"
version = "0.1.0"
edition = "2021"

[features]
default = ["codegen"]
codegen = ["dep:codegen_llvm"]

[dependencies]
codegen_llvm = { path = "crates/codegen_llvm", optional = true }
clap = { version = "4.0", features = ["derive"] }
frontend = { path = "crates/frontend" }
codegen_traits = { path = "crates/codegen_traits" }
tempfile = "3.8"
walkdir = "2.3"

[dev-dependencies]
assert_cmd = "2.0"
libtest-mimic = "0.6"

[lints.rust]
unsafe_code = "forbid"
warnings = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cast_sign_loss = "allow"
items_after_statements = "allow"
manual_let_else = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
result_large_err = "allow"
too_many_lines = "allow"

[[test]]
name = "tiny_v_fixtures"
harness = false

[[test]]
name = "official_subset"
harness = false

[[test]]
name = "vlib_subset"
harness = false

[[test]]
name = "vlib_suite"
harness = false

[[test]]
name = "official_suite"
harness = false
