[package]
name = "codegen_llvm"
version = "0.1.0"
edition = "2021"

[dependencies]
frontend = { path = "../frontend" }
codegen_traits = { path = "../codegen_traits" }
inkwell = { version = "0.8.0", features = ["llvm15-0"] }
tempfile = "3.8"

[lints.rust]
unsafe_code = "forbid"
warnings = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cast_sign_loss = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
too_many_lines = "allow"
