[package]
name = "codegen_traits"
version = "0.1.0"
edition = "2021"

[dependencies]
frontend = { path = "../frontend" }

[lints.rust]
unsafe_code = "forbid"
warnings = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
missing_errors_doc = "allow"
